--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -9,6 +9,7 @@
         <scene sceneID="1ou-x1-TiE">
             <objects>
                 <navigationController id="wI0-Z4-0OB" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="hOO-0w-4HR">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -30,42 +31,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
-                            <tableViewSection headerTitle="Информация" id="Fno-Mm-vLG">
-                                <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="helpCell" textLabel="28Q-0E-hts" style="IBUITableViewCellStyleDefault" id="XQg-Us-BMa">
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XQg-Us-BMa" id="Ptc-YE-Lkl">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Справка" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="28Q-0E-hts">
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="enz-08-n4j" style="IBUITableViewCellStyleDefault" id="Wv0-18-bXp">
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Wv0-18-bXp" id="w4y-7I-DJw">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Пользовательское соглашение" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="enz-08-n4j">
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="cAV-CW-ZuA" kind="presentation" id="nKy-N1-0pZ"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                            <tableViewSection headerTitle="Настройка" id="v1o-9t-zdY">
+                            <tableViewSection id="v1o-9t-zdY">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="44" id="ssQ-bG-zkZ">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -124,13 +90,13 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6XN-Lh-Xm4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="860" y="-892.5"/>
+            <point key="canvasLocation" x="354" y="-857"/>
         </scene>
         <!--Выберите раздел-->
         <scene sceneID="wOP-uy-2fu">
             <objects>
                 <tableViewController id="u8c-EJ-BLV" customClass="DVBBoardsViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="44" sectionFooterHeight="22" id="wPd-6F-3Ot">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="wPd-6F-3Ot">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -169,6 +135,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <segue destination="cAV-CW-ZuA" kind="presentation" identifier="segueToEula" animates="NO" id="0sF-TY-xlc"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1JP-9b-ThQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -178,7 +147,7 @@
         <scene sceneID="7uI-NE-kWa">
             <objects>
                 <tableViewController storyboardIdentifier="DVBBoardViewController" id="js8-qz-HcM" customClass="DVBBoardViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="84" sectionHeaderHeight="44" sectionFooterHeight="22" id="f0r-jZ-ed2">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="84" sectionHeaderHeight="22" sectionFooterHeight="22" id="f0r-jZ-ed2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -258,6 +227,7 @@
         <scene sceneID="W4B-c7-PmW">
             <objects>
                 <navigationController id="cAV-CW-ZuA" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="p8v-x3-4N5">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -268,9 +238,9 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wbA-2d-s3e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1338" y="-839"/>
+            <point key="canvasLocation" x="860" y="-857"/>
         </scene>
-        <!--Agreement View Controller-->
+        <!--EULA-->
         <scene sceneID="yjW-uR-5EF">
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="yFx-TE-724" customClass="DVBAgreementViewController" sceneMemberID="viewController">
@@ -330,25 +300,17 @@
                             <constraint firstAttribute="bottom" secondItem="a02-0T-2Xt" secondAttribute="bottom" id="ytV-lu-9gF"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="e7e-pO-DdX">
-                        <barButtonItem key="leftBarButtonItem" title="Не согласен" id="U6v-BR-zBx">
-                            <connections>
-                                <action selector="goBack:" destination="yFx-TE-724" id="5xH-ho-fv0"/>
-                            </connections>
-                        </barButtonItem>
+                    <navigationItem key="navigationItem" title="EULA" id="e7e-pO-DdX">
                         <barButtonItem key="rightBarButtonItem" title="Согласен" id="ouW-Gj-1Po">
                             <connections>
                                 <action selector="agreeAction:" destination="yFx-TE-724" id="Zjq-s4-pdG"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <connections>
-                        <outlet property="notAcceptedBtn" destination="U6v-BR-zBx" id="kqq-ge-28A"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OoT-dv-3cv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1804" y="-839"/>
+            <point key="canvasLocation" x="1338" y="-857"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GR0-3r-PoB">
@@ -372,7 +334,7 @@
         <scene sceneID="SFb-Mu-qTJ">
             <objects>
                 <tableViewController storyboardIdentifier="DVBThreadViewController" id="3hz-5v-Niv" customClass="DVBThreadViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="81" sectionHeaderHeight="44" sectionFooterHeight="22" id="eQz-tx-oWe">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="81" sectionHeaderHeight="22" sectionFooterHeight="22" id="eQz-tx-oWe">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -622,8 +584,8 @@
         <image name="Toppage" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Iwy-TH-KYT"/>
+        <segue reference="xwW-TO-L0b"/>
+        <segue reference="Xk9-pa-bWO"/>
         <segue reference="fFt-k5-qt1"/>
-        <segue reference="o55-Sb-BOJ"/>
     </inferredMetricsTieBreakers>
 </document>
